--- a/.github/workflows/process_locations.yaml
+++ b/.github/workflows/process_locations.yaml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2 #check out the repository
       - uses: r-lib/actions/setup-r@v2 #set up the R environment
+      - name: Install regular packages
         run:
           Rscript -e "install.packages(c("tidygeocoder", "sf", "geojsonsf"))"
       - name: Create Map Data
